src/parser/snapshots/monkey_language_server__parser__test__fn_call_happy_7.snap
---
source: src/parser/test.rs
description: "add(2, add(6, 7 * 8))"
expression: result
---
[
    Call {
        token: Token(LParen, "(", (0,3)->(0,4)),
        func: Identifier {
            token: Token(Identifier, "add", (0,0)->(0,3)),
            name: "add",
        },
        args: Ok(
            [
                Ok(
                    Int {
                        token: Token(Int, "2", (0,4)->(0,5)),
                        value: 2,
                    },
                ),
                Ok(
                    Call {
                        token: Token(LParen, "(", (0,10)->(0,11)),
                        func: Identifier {
                            token: Token(Identifier, "add", (0,7)->(0,10)),
                            name: "add",
                        },
                        args: Ok(
                            [
                                Ok(
                                    Int {
                                        token: Token(Int, "6", (0,11)->(0,12)),
                                        value: 6,
                                    },
                                ),
                                Ok(
                                    Infix {
                                        token: Token(Asterisk, "*", (0,16)->(0,17)),
                                        left: Int {
                                            token: Token(Int, "7", (0,14)->(0,15)),
                                            value: 7,
                                        },
                                        right: Int {
                                            token: Token(Int, "8", (0,18)->(0,19)),
                                            value: 8,
                                        },
                                        operator: Mult,
                                    },
                                ),
                            ],
                        ),
                    },
                ),
            ],
        ),
    },
]

===================================

add(2, add(6, 7 * 8))
