src/parser/snapshots/monkey_language_server__parser__test__fn_call_unhappy_10_errors.snap
---
source: src/parser/test.rs
description: "add(@, 2)"
expression: "parser_errors(\"add(@, 2)\", errors)"
---
add(@, 2)
    ^ SyntaxError: Unexpected '@'.
