src/parser/snapshots/monkey_language_server__parser__test__fn_call_unhappy_2.snap
---
source: src/parser/test.rs
description: add)
expression: result
---
[
    Identifier {
        token: Token(Identifier, "add", (0,0)->(0,3)),
        name: "add",
    },
    Err(UnexpectedToken("SyntaxError: Unexpected ')'."), (0,3)->(0,4)),
]

===================================

add)
   ^ SyntaxError: Unexpected ')'.
